# AnywhereTranslate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: GlobalHotkeyWatcher.cpp  GlobalHotkeyWatcher.h  MainWindow.cpp  MainWindow.h  PopupWindow.cpp  PopupWindow.h  SettingsDialog.cpp  SettingsDialog.h  TranslatorService.cpp  TranslatorService.h  main.cpp
